--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com,account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, api.polaxiong.com, api.rr.tv, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, *.amemv.com, aweme*.snssdk.com, api.bilibili.com, app.bilibili.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com,account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, api.polaxiong.com, api.rr.tv, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, *.amemv.com, aweme*.snssdk.com
 
 # 微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Wechat.js
@@ -58,17 +58,6 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https?:\/\/api\.zhihu\.com\/search\/top_search\/tabs\/hot\/items url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu_plus.js
 ^https?:\/\/api\.zhihu\.com\/topstory\/hot-lists?(\?|\/) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu_plus.js
 ^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu_plus.js
-
-# 哔哩哔哩动画广告 (onewayticket255)
-https://app.bilibili.com/x/v2/(splash|search/(defaultword|square)) url reject-200
-https://api.bilibili.com/x/v2/dm/ad url reject-200
-#https://app.bilibili.com/x/v2/space\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20space.js
-https://app.bilibili.com/x/resource/show/tab\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20tab.js
-https://app.bilibili.com/x/v2/feed/index\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20feed.js
-https://app.bilibili.com/x/v2/account/mine\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20account.js
-https://app.bilibili.com/x/v2/view\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20view%20relate.js
-https://api.bilibili.com/x/v2/reply/main\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20reply.js
-https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20live.js
 
 # Netflix评分 (yichahucha)
 ^https?://ios[-\w]*\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
