--- a/Rewrite/QuantumultX_Profiles.conf
+++ b/Rewrite/QuantumultX_Profiles.conf
@@ -270,6 +270,8 @@ final, 🕹 终极清单
 #
 
 [general]
+# 建议在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」并开启「自动更新」
+
 ;profile_img_url=http://www.example.com/example.png
 
 # resource_parser_url 示例可以在以下网站找到 https://raw.githubusercontent.com/crossutility/Quantumult-X/master/resource-parser.js
@@ -309,8 +311,8 @@ excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.
 # 说明：参数 fallback_udp_policy 的值仅支持末端策略（末端策略为经由规则模块和策略模块后所命中的策略，例如：direct、reject 以及节点；不支持内置策略 proxy 以及其它自定义策略）。默认为 reject。
 # 当 UDP 请求经过规则模块以及策略模块后所命中的节点为 Quantumult X 所不支持 UDP 转发的节点（如：VMess、trojan），或支持 UDP 转发但未注明 udp-relay=true 的（例如：SS/SSR 且与服务器是否真实开启 UDP 转发无关），则 fallback_udp_policy 会被使用。
 # 注意：如果您需要调整该参数的值为 direct，请务必清楚了解同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
-# 如果节点支持 UDP 转发并开启可注释下条或或改回默认的「reject」
-fallback_udp_policy=direct
+# 如果没有节点支持 UDP 转发，可取消下条注释（去除 ;）
+;fallback_udp_policy=direct
 
 ;icmp_auto_reply=true
 
@@ -383,11 +385,22 @@ server=/update.googleapis.com/119.29.29.29
 server=/*.dl.playstation.net/119.29.29.29
 
 # > Router Admin Panel
-server=/falogin.cn/system
-server=/melogin.cn/system
+server=/amplifi.lan/system
+server=/router.synology.com/system
+server=/sila.razer.com/system
 server=/router.asus.com/system
-server=/tplinklogin.net/system
+server=/routerlogin.net/system
+server=/orbilogin.com/system
+server=/www.LinksysSmartWiFi.com/system
+server=/LinksysSmartWiFi.com/system
+server=/myrouter.local/system
+server=/www.miwifi.com/system
+server=/miwifi.com/system
+server=/mediarouter.home/system
 server=/tplogin.cn/system
+server=/tplinklogin.net/system
+server=/melogin.cn/system
+server=/falogin.cn/system
 
 ;server=8.8.4.4:53
 ;server=/example0.com/system
@@ -478,10 +491,6 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Ext
 
 # China 中国直连
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/China.list, tag=🇨🇳China, force-policy=direct, update-interval=86400, opt-parser=true, enabled=true
-
-# IPList for China
-https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt#type=rule, tag=🇨🇳ChinaIPv4, force-policy=direct, update-interval=86400, opt-parser=true, enabled=true
-https://gaoyifan.github.io/china-operator-ip/chinanet6.txt#type=rule, tag=🇨🇳ChinaIPv6, force-policy=direct, update-interval=86400, opt-parser=true, enabled=false
 
 [rewrite_remote]
 #
