--- a/Rewrite/AdvertisingPlus.conf
+++ b/Rewrite/AdvertisingPlus.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m,app.bilibili.com
+hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m,app.bilibili.com
 
 # (By Choler)
 # > Douyin(<= 16.2.0) - api*.amemv.com,aweme.snssdk.com
@@ -26,6 +26,8 @@ https?:\/\/(.+?)\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https:
 ^https?:\/\/api\.zhihu\.com\/topstory\/hot-lists?(\?|\/) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu.js
 # 知乎评论去广告
 ^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu.js
+# 优化软件配置
+^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu.js
 
 # > SMZDM 
 ^https?:\/\/app-api\.smzdm\.com\/util\/loading url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
